modify ewallet and add lib

--- a/PaytureTestApp/nbproject/project.properties
+++ b/PaytureTestApp/nbproject/project.properties
@@ -28,7 +28,9 @@ dist.jar=${dist.dir}/PaytureTestApp.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 file.reference.commons-logging-1.2.jar=lib\\commons-logging-1.2.jar
+file.reference.httpasyncclient-4.1.3.jar=lib\\httpasyncclient-4.1.3.jar
 file.reference.httpcore-4.4.6.jar=lib\\httpcore-4.4.6.jar
+file.reference.httpcore-nio-4.4.6.jar=lib\\httpcore-nio-4.4.6.jar
 file.reference.jdom-2.0.6.jar=lib\\jdom-2.0.6.jar
 file.reference.org.apache.httpcomponents.httpclient_4.5.3.jar=lib\\org.apache.httpcomponents.httpclient_4.5.3.jar
 includes=**
@@ -38,7 +40,9 @@ javac.classpath=\
     ${file.reference.commons-logging-1.2.jar}:\
     ${file.reference.org.apache.httpcomponents.httpclient_4.5.3.jar}:\
     ${file.reference.httpcore-4.4.6.jar}:\
-    ${file.reference.jdom-2.0.6.jar}
+    ${file.reference.jdom-2.0.6.jar}:\
+    ${file.reference.httpasyncclient-4.1.3.jar}:\
+    ${file.reference.httpcore-nio-4.4.6.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
