--- a/PaytureJava/nbproject/project.properties
+++ b/PaytureJava/nbproject/project.properties
@@ -27,7 +27,9 @@ dist.dir=dist
 dist.jar=${dist.dir}/PaytureJava.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.httpasyncclient-4.1.3.jar=lib\\httpasyncclient-4.1.3.jar
 file.reference.httpcore-4.4.6.jar=lib\\httpcore-4.4.6.jar
+file.reference.httpcore-nio-4.2.jar=lib\\httpcore-nio-4.2.jar
 file.reference.jdom-2.0.6.jar=lib\\jdom-2.0.6.jar
 file.reference.org.apache.httpcomponents.httpclient_4.5.3.jar=lib\\org.apache.httpcomponents.httpclient_4.5.3.jar
 includes=**
@@ -35,7 +37,9 @@ jar.compress=false
 javac.classpath=\
     ${file.reference.org.apache.httpcomponents.httpclient_4.5.3.jar}:\
     ${file.reference.httpcore-4.4.6.jar}:\
-    ${file.reference.jdom-2.0.6.jar}
+    ${file.reference.jdom-2.0.6.jar}:\
+    ${file.reference.httpasyncclient-4.1.3.jar}:\
+    ${file.reference.httpcore-nio-4.2.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
